[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trustos"
version = "0.1.0"
description = "Python SDK for the Trust OS Decision Verification API"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Trustfolio Inc.", email = "admin@trust-os.io" }]
requires-python = ">=3.9"
dependencies = ["requests>=2.31.0"]
keywords = ["trust-os", "decision-verification", "ai-agents", "fintech", "api-client"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
]

[project.urls]
Homepage = "https://trust-os.io"
Documentation = "https://trust-os.io/docs"
Source = "https://github.com/trustos-trustfolio/trustos-python-sdk"
Issues = "https://github.com/trustos-trustfolio/trustos-python-sdk/issues"
OpenAPI = "https://trust-os.io/openapi.json"

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "responses>=0.25.0"]

[tool.setuptools.packages.find]
include = ["trustos*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
